[package]
name = "cert-fixer"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["v1_27"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0.80"
futures-util = "0.3.30"