[package]
name = "cert-fixer"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.95.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["v1_27"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0.86"
futures-util = "0.3.30"